--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>세로 한 칸 짜리 표</title>
+    <title>seogi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
