modified:   index.html 	new file:   source/rock.png 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 <body>
     <div class="table-container">
+        <div class="table-wrapper"></div>
         <table id="data-table">
             <!-- 데이터가 JavaScript로 동적으로 삽입됨 -->
         </table>
+    </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
